// Vitest Snapshot v1

exports[`Frame > correct usage > renders custom position 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: top left;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio as a string 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio as a string with spaces 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": "16 / 9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders with ratio as an array 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > correct usage > renders without ratio 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders default position with incorrect value 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": "16/9",
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio if ratio is not correct type 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if array of length <1 provided 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if array of length >2 provided 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if array of not numbers provided 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;

exports[`Frame > incorrect usage > renders without ratio with error if ratio string is not correct format 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  inline-size: 100%;
  position: relative;
  overflow: hidden;
}

.c0[style*="--ratio"] {
  aspect-ratio: var(--ratio);
}

.c0 > * {
  position: absolute;
  -webkit-inset-block-start: 0;
  -ms-intb-rlock-start: 0;
  inset-block-start: 0;
  -webkit-inset-block-end: 0;
  -ms-inlrock-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  inset-inline-end: 0;
  inset-block: 0;
  inset-inline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :is(img,video) {
  inline-size: 100%;
  -webkit-block-size: 100%;
  -ms-flex-block-size: 100%;
  block-size: 100%;
  size: 100%;
  object-fit: cover;
  object-position: 50%;
}

<div
  className="c0"
  data-bedrock-frame=""
  style={
    {
      "--ratio": undefined,
    }
  }
>
  <img
    alt="random thing"
    src="https://picsum.photos/5000"
  />
</div>
`;
